# mdtoaudio

./: .gitignore  README.md  mdtoaudio.py  pyproject.toml
docs/superpowers/plans/: 2026-06-10-mdtoaudio.md
docs/superpowers/specs/: 2026-06-10-mdtoaudio-design.md
tests/: test_ask_mode.py  test_chunk_text.py  test_clean_text.py  test_collect_md_files.py  test_convert_audio.py  test_embed_audio.py  test_process_file.py
